--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.beltraoluis.intrachat"
         minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 1000000
-        versionName "1.0.0"
+        targetSdkVersion 27
+        versionCode 1000001
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,6 +32,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    // GraphView
+    implementation 'com.jjoe64:graphview:4.2.2'
+
     // Anko Commons
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
@@ -43,6 +46,9 @@ dependencies {
     // Coroutine listeners for Anko Layouts
     implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+
+    // RecyclerView
+    implementation "org.jetbrains.anko:anko-recyclerview-v7:0.10.5"
 
     // Anko SQLite
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
